--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Card from "../components/Card.astro";
 ---
 
-<Layout title="Welcome to Astro.">
-	<main></main>
+<Layout title="Rubén Lázaro">
+	<main>DEFAULT</main>
 </Layout>
