--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -3,5 +3,5 @@ import Layout from "../../layouts/Layout.astro";
 ---
 
 <Layout title="Rubén Lázaro">
-	<main>HI</main>
+	<div class="divider"></div>
 </Layout>
