--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,6 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Rubén Lázaro">
+<Layout sideBarActiveItemID="home" title="Rubén Lázaro">
 	<div class="divider"></div>
 </Layout>
