more metadata and icons

--- a/src/components/SidebarFooter.astro
+++ b/src/components/SidebarFooter.astro
@@ -54,13 +54,7 @@
             ></path>
         </svg>
     </a>
-    <a
-        href="https://www.linkedin.com/in/ruben-lazaro/"
-        target="_blank"
-        class="mx-3"
-        aria-label="Linkedin"
-        title="Linkedin"
-    >
+    <a href="https://www.linkedin.com/in/ruben-lazaro/" target="_blank" class="mx-3" aria-label="Linkedin" title="Linkedin">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
